

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id("org.beryx.jlink") version "3.0.1"
    //id 'com.gluonhq.gluonfx-gradle-plugin' version '1.0.22'
    //id 'org.graalvm.buildtools.native' version '0.9.28'

}

group = 'klik'
version = '1.0.0'

repositories {
    mavenCentral()
    gradlePluginPortal()
}

compileJava {
    // this is needed to enable the virtual threads preview feature in java20
    //options.compilerArgs += ['--enable-preview']
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}


dependencies {
    // EXIF reader
    implementation 'com.drewnoakes:metadata-extractor:2.19.0'
    // Cache
    implementation group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '3.1.8'
    // files etc
    implementation group: 'commons-io', name: 'commons-io', version: '2.15.1'
    // PDF icons
    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '3.0.1'

}



def main_class_name = 'klik.Klik_application'

application {
    mainModule = 'klikmodule'
    mainClass = main_class_name

    // Java VM RAM size options:
    applicationDefaultJvmArgs = ["-XX:MaxRAMPercentage=90.0"]
    // if you have 16GB or more and want to give a lot of RAM to klik to be able to maintain a lot of open windows:
    //applicationDefaultJvmArgs = ["-Xms10G","-Xmx10G"]
    // if you have only 2GB or not much more:
    //applicationDefaultJvmArgs = ["-Xms1G"]
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing','javafx.graphics','javafx.media' ]
}


jar {
    manifest {
        attributes(
                'Main-Class': main_class_name
        )
    }
}

/*
graalvmNative {
    binaries {
        main {
            imageName = "klik"
            mainClass = main_class_name
            buildArgs.add("-O4")
        }
        test {
            buildArgs.add("-O0")
        }
    }
    binaries.all {
        buildArgs.add("--verbose")
    }
}
*/

